--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -13,7 +13,7 @@ jobs:
           go-version: '1.22.0'
 
       - name: Install dependencies
-        run: go get tidy && go mod download
+        run: go mod tidy && go mod download
 
       - name: Build
         run: go build -v ./...
